# jav-manager

./: .gitignore  AGENTS.md  HANDOFF.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: feedback-package.md
scripts/: collect-feedback.ps1  collect-feedback.test.ts  start-tauri-dev.ps1
src/: App.inventory.test.tsx  App.tsx  api.ts  daemonClient.test.ts  daemonClient.ts  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: configure.rs  inspect_library.rs  merge_item_to_work.rs  phase_f_dry_run.rs  preview_rebuild.rs  resolve_latest_item.rs  scan_to_sqlite.rs  stage1_smoke.rs  stage2_smoke.rs  stage3_daemon_smoke.rs
src-tauri/src/: acceptance.rs  archive.rs  aria2.rs  commands.rs  control_service.rs  control_service_host.rs  daemon.rs  daemon_control.rs  diagnostics.rs  domain.rs  identifier.rs  ingest.rs  inventory.rs  inventory_execution.rs  inventory_move.rs  lib.rs  library_rebuild.rs  main.rs  matcher.rs  migration.rs  nfo.rs  pipeline.rs  post_migration.rs  poster_index.rs  primary_sync.rs  provider.rs  remote_scraper.rs  resource_pool.rs  scanner.rs  self_check.rs  storage.rs  thumbnail.rs
src-tauri/tests/: aria2_rpc.rs  auto_pipeline.rs  control_service.rs  control_service_host.rs  core_behaviour.rs  daemon.rs  daemon_control.rs  data_model.rs  diagnostics.rs  inventory.rs  inventory_execution.rs  library_rebuild.rs  post_migration.rs  remote_scraper.rs  self_check.rs
src-tauri/tests/fixtures/remote_scraper/: fanza_movie.html  javbus_movie.html  javdb_movie.html
(+39 files in other folders)
